environments/gloo-gateway/gateway-api/1.18/ai-gateway/chatbot/base/llama-gpt/llama-gpt-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: llama-gpt-api
  name: llama-gpt-api
spec:
  ports:
    - name: api
      port: 8000
      targetPort: 8000
  selector:
    service: llama-gpt-api
status:
  loadBalancer: {}
