environments/gloo-gateway/gateway-api/1.18/ai-gateway/chatbot/base/llama-gpt/llama-gpt-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: llama-gpt-ui
  name: llama-gpt-ui
spec:
  ports:
    - name: ui
      port: 3000
      targetPort: 3000
  selector:
    service: llama-gpt-ui
  type: ClusterIP
status:
  loadBalancer: {}
